<resources>
    <string name="app_name">Character Generator 5e</string>
    <string name="generate">Generate</string>
    <string name="races">Races</string>
    <string name="classes">Classes</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="alignments">Alignments</string>
    <string name="back_button">Back Button</string>
    <string name="settings_button">Settings Button</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
</resources>