<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="generatorViewModel"
            type="com.example.charactergenerator5e.ui.generator.GeneratorViewModel" />
    </data>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".ui.generator.SettingsFragment">

                <Button
                    android:id="@+id/racesOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/races"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/classesOption"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <Button
                    android:id="@+id/classesOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classes"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/backgroundsOption"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/racesOption" />
                <Button
                    android:id="@+id/backgroundsOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backgrounds"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/alignmentsOption"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/classesOption" />
                <Button
                    android:id="@+id/alignmentsOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alignments"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/backButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backgroundsOption" />

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_button_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/alignmentsOption"
                    android:contentDescription="@string/back_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>