<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="generatorViewModel"
            type="com.example.charactergenerator5e.ui.generator.GeneratorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.generator.AlignmentsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alignments_list"
            app:listData="@{generatorViewModel.settings}"
            android:clipToPadding="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="10dp"
            android:overScrollMode="never"
            app:layoutManager=
                "androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
            app:spanCount="3"
            tools:itemCount="9"
            tools:listitem="@layout/alignment_entry_item" />

        <LinearLayout
            android:id="@id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:context=".ui.generator.AlignmentsFragment" >

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:layout_weight="0"
                android:contentDescription="@string/back_button"
                android:src="@drawable/back_button_icon" />

            <Button
                android:id="@+id/selectAllButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:src="@drawable/back_button_icon"
                android:text="@string/select_all" />

            <Button
                android:id="@+id/deselectAllButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:src="@drawable/back_button_icon"
                android:text="@string/deselect_all" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>